[package]
name = "rss-bamview"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
csv = "1.3"
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
rayon = "1.10"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
winreg = "0.55"
yara-x = "1.15"

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_Security_WinTrust",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"
